# techno-iz1

./: CMakeLists.txt  Makefile  README.md  main.c
.github/workflows/: c-cpp.yml
cmd/: CMakeLists.txt  main.c
main/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/: CMakeLists.txt
src/adder/: CMakeLists.txt  adder.c  adder.h
src/input_processing/: CMakeLists.txt  processing.c  processing.h
src/storage/: CMakeLists.txt  storage.c  storage.h
tests/unit/: CMakeLists.txt
tests/unit/adder/: CMakeLists.txt  adder_test.cpp  main.cpp
tests/unit/storage/: CMakeLists.txt  main.cpp  storage.cpp
